--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@ limitations under the License.
       <version>1.55.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+	  </dependency>
+
   </dependencies>
 
 
