added map servlet to fetch locations from back-end

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,11 @@ limitations under the License.
       <artifactId>google-cloud-translate</artifactId>
       <version>1.55.0</version>
     </dependency>
-
+    <dependency>
+        <groupId>org.javatuples</groupId>
+        <artifactId>javatuples</artifactId>
+        <version>1.2</version>
+    </dependency>
   </dependencies>
 
 
