--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,10 @@ limitations under the License.
         <artifactId>appengine-maven-plugin</artifactId>
         <version>1.9.59</version>
       </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.6</version>
+      </plugin>  
     </plugins>
   </build>
 </project>
