--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,25 @@ limitations under the License.
         <artifactId>javatuples</artifactId>
         <version>1.2</version>
     </dependency>
-    
+
+
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>1.23.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.oauth-client</groupId>
+      <artifactId>google-oauth-client-jetty</artifactId>
+      <version>1.23.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-calendar</artifactId>
+      <version>v3-rev305-1.23.0</version>
+    </dependency>
+
+
   </dependencies>
 
 
